tests/toy/neg/001405_mutation.toylang
program a = { var a : bool var } .
